feat: Integrate Spring Boot backend and add API docs
Replaces direct dummy data usage with the Spring Boot backend. Populates the PostgreSQL database with dummy data and generates detailed API documentation.